[feat] add some article edit features, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,10 @@
   "": "",
   "About us": "About us",
   "Access not allowed": "Access not allowed",
+  "Add": "Add",
+  "Add Code": "Code block",
+  "Add Image": "Image block",
+  "Add Text": "Text block",
   "Add article": "Add article",
   "Admin": "Admin",
   "Admin page panel": "Admin page panel",
@@ -15,6 +19,7 @@
   "Articles not found": "Articles not found",
   "Articles page": "Articles page",
   "Avatar": "Avatar",
+  "Back": "Back",
   "Back to articles": "Back to articles",
   "Cancel": "Cancel",
   "Cancel edit": "Cancel edit",
