--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,10 @@
   "": "",
   "About us": "О сайте",
   "Access not allowed": "Доступ запрещен",
+  "Add": "Добавить",
+  "Add Code": "Блок кода",
+  "Add Image": "Изображение",
+  "Add Text": "Блок текста",
   "Add article": "Создать статью",
   "Admin": "Админка",
   "Admin page panel": "Панель админа",
@@ -15,6 +19,7 @@
   "Articles not found": "Статьи не найдены",
   "Articles page": "Страница статей",
   "Avatar": "Аватар",
+  "Back": "Назад",
   "Back to articles": "Назад к статьям",
   "Cancel": "Cancel",
   "Cancel edit": "Отменить",
