[feat] add modals to some article edit features, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "About Page": "About Page",
   "About us": "About us",
   "Access not allowed": "Access not allowed",
   "Add": "Add",
@@ -25,8 +26,11 @@
   "Cancel edit": "Cancel edit",
   "City": "City",
   "Comments": "Comments",
+  "Confirm": "Confirm",
+  "Confirm cancellation": "Confirm cancellation",
   "Country": "Country",
   "Currency": "Currency",
+  "Delete block": "Delete block",
   "Design switcher": "Design switcher",
   "Economics": "Economics",
   "Edit Code": "Edit Code",
@@ -46,6 +50,7 @@
   "Image title": "Image title",
   "Last name": "LastName",
   "Main": "Main",
+  "Main Page": "Main Page",
   "New": "New",
   "No comments": "No comments",
   "Old": "Old",
@@ -66,8 +71,9 @@
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Thanks for the rating!",
-  "Topick": "Topick",
-  "Topicks": "Topicks",
+  "The page is in development": "The page is in development",
+  "Topic": "Topic",
+  "Topics": "Topics",
   "User settings": "User settings",
   "Username": "Username",
   "We will glad to get your vote": "We will glad to get your vote",
