--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "About Page": "О сайте",
   "About us": "О сайте",
   "Access not allowed": "Доступ запрещен",
   "Add": "Добавить",
@@ -25,8 +26,11 @@
   "Cancel edit": "Отменить",
   "City": "Город",
   "Comments": "Комментарии",
+  "Confirm": "Confirm",
+  "Confirm cancellation": "Подтверждаете отмену",
   "Country": "Страна",
   "Currency": "Валюта",
+  "Delete block": "Удалить блок",
   "Design switcher": "Design switcher",
   "Economics": "Экономика",
   "Edit Code": "Редактировать Код",
@@ -46,6 +50,7 @@
   "Image title": "Заголовок изображения",
   "Last name": "Фамилия",
   "Main": "Главная",
+  "Main Page": "Main Page",
   "New": "New",
   "No comments": "Комментариев нет",
   "Old": "Old",
@@ -66,8 +71,9 @@
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Спасибо за оценку!",
-  "Topick": "Topick",
-  "Topicks": "Темы",
+  "The page is in development": "Страница находится в разработке",
+  "Topic": "Тема",
+  "Topics": "Темы",
   "User settings": "User settings",
   "Username": "Никнейм",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
