[feat] add possibility to create new user, add create user profile as empty  form, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,7 @@
   "Admin": "Admin",
   "Admin page panel": "Admin page panel",
   "Age": "Age",
+  "All fields mast be filled": "All fields mast be filled",
   "All topics": "All topics",
   "Article Subtitle": "Article Subtitle",
   "Article Title": "Article Title",
@@ -29,6 +30,7 @@
   "Confirm": "Confirm",
   "Confirm cancellation": "Confirm cancellation",
   "Country": "Country",
+  "Create": "Create",
   "Currency": "Currency",
   "Delete block": "Delete block",
   "Design switcher": "Design switcher",
@@ -43,6 +45,7 @@
   "Enter text": "Enter text",
   "Enter username": "Enter username",
   "Exit": "Exit",
+  "Fill": "Fill",
   "First name": "FirstName",
   "Here you can read articles for different themes": "Here you can read articles for different themes",
   "IT": "IT",
@@ -51,10 +54,13 @@
   "Last name": "LastName",
   "Main": "Main",
   "Main Page": "Main Page",
+  "Max length 20 characters": "Max length 20 characters",
+  "Min length 3 character": "Min length 3 character",
   "New": "New",
   "No comments": "No comments",
   "Old": "Old",
   "Order": "Order",
+  "Passwords must match": "Passwords must match",
   "Profile": "Profile",
   "Profile page error": "Profile page error",
   "ProfilePage": "Profile Page",
@@ -63,11 +69,13 @@
   "Read more": "Read more...",
   "Recommendations": "Recommendations",
   "Recommendations list error": "Recommendations list error",
+  "Repeat password": "Repeat password",
   "Save": "Save",
   "Science": "Science",
   "Search": "Search",
   "Send": "Send",
   "Settings": "Settings",
+  "Sign up": "Sign up",
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Thanks for the rating!",
@@ -76,6 +84,7 @@
   "Topics": "Topics",
   "User settings": "User settings",
   "Username": "Username",
+  "Username already exist": "Username already exist",
   "We will glad to get your vote": "We will glad to get your vote",
   "Welcome to the Articles Page": "Welcome to the Articles Page",
   "Your feedback": "Your feedback",
@@ -93,9 +102,12 @@
   "logIn": "LogIn",
   "logOut": "LogOut",
   "noData": "No data found",
+  "notCorrectUserData": "Incorrect login or password",
   "required": "Required field",
   "serverError": "Server Error",
   "short-lng": "Ru",
+  "signUp": "signUp",
+  "signupForm": "Signup form",
   "throw error": "Throw error",
   "{{count}} views": "{{count}} views",
   "{{count}} views_one": "{{count}} view",
