--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "Admin": "Админка",
   "Admin page panel": "Панель админа",
   "Age": "Возраст",
+  "All fields mast be filled": "All fields mast be filled",
   "All topics": "Все темы",
   "Article Subtitle": "Подзаголовок статьи",
   "Article Title": "Заголовок статьи",
@@ -29,6 +30,7 @@
   "Confirm": "Confirm",
   "Confirm cancellation": "Подтверждаете отмену",
   "Country": "Страна",
+  "Create": "Создать",
   "Currency": "Валюта",
   "Delete block": "Удалить блок",
   "Design switcher": "Design switcher",
@@ -43,6 +45,7 @@
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
   "Exit": "Выход",
+  "Fill": "Заполнить",
   "First name": "Имя",
   "Here you can read articles for different themes": "Здесь вы сможете просматривать статьи на разные темы",
   "IT": "IT",
@@ -51,10 +54,13 @@
   "Last name": "Фамилия",
   "Main": "Главная",
   "Main Page": "Main Page",
+  "Max length 20 characters": "Max length 20 characters",
+  "Min length 3 character": "Min length 3 character",
   "New": "New",
   "No comments": "Комментариев нет",
   "Old": "Old",
   "Order": "Порядок",
+  "Passwords must match": "Passwords must match",
   "Profile": "Профиль",
   "Profile page error": "Ошибка отображения страницы профиля",
   "ProfilePage": "Страница профиля",
@@ -63,11 +69,13 @@
   "Read more": "Читать далее",
   "Recommendations": "Рекомендации",
   "Recommendations list error": "Ошибка отображения рекомендаций",
+  "Repeat password": "Повторите пароль",
   "Save": "Сохранить",
   "Science": "Наука",
   "Search": "Поиск",
   "Send": "Отправить",
   "Settings": "Настройки",
+  "Sign up": "Регистрация",
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Спасибо за оценку!",
@@ -76,6 +84,7 @@
   "Topics": "Темы",
   "User settings": "User settings",
   "Username": "Никнейм",
+  "Username already exist": "Такой пользователь уже существует",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
   "Welcome to the Articles Page": "Добро пожаловать на страницу статей",
   "Your feedback": "Ваш отзыв",
@@ -93,9 +102,12 @@
   "logIn": "Войти",
   "logOut": "Выйти",
   "noData": "Нет данных",
+  "notCorrectUserData": "Некорректное имя или пароль",
   "required": "Обязательное поле",
   "serverError": "Ошибка сервера",
   "short-lng": "En",
+  "signUp": "signUp",
+  "signupForm": "Форма регистрации",
   "throw error": "Пробросить ошибку",
   "{{count}} views": "{{count}} views",
   "{{count}} views_0": "{{count}} views_0",
