[feat] mainPage redesigned, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,6 +29,7 @@
   "Comments": "Comments",
   "Confirm": "Confirm",
   "Confirm cancellation": "Confirm cancellation",
+  "Contact me": "Contact me",
   "Country": "Country",
   "Create": "Create",
   "Currency": "Currency",
