--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,6 +29,7 @@
   "Comments": "Комментарии",
   "Confirm": "Confirm",
   "Confirm cancellation": "Подтверждаете отмену",
+  "Contact me": "Contact me",
   "Country": "Страна",
   "Create": "Создать",
   "Currency": "Валюта",
