[feat] add about page info and widget, fix hook useResizeObserver, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "About": "About",
   "About Page": "About Page",
   "About us": "About us",
   "Access not allowed": "Access not allowed",
