[feat] add tags layout, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,7 @@
   "Article Subtitle": "Article Subtitle",
   "Article Title": "Article Title",
   "Article detail page": "Article detail page",
+  "Article not found": "Article not found",
   "Article rating is in progress": "Article rating is in progress",
   "Articles": "Articles",
   "Articles not found": "Articles not found",
@@ -53,6 +54,7 @@
   "IT": "IT",
   "Image Path": "Image Path",
   "Image title": "Image title",
+  "Language": "Русский",
   "Last name": "LastName",
   "Main": "Main",
   "Main Page": "Main Page",
@@ -62,6 +64,7 @@
   "No comments": "No comments",
   "Old": "Old",
   "Order": "Order",
+  "Page not found": "Page not found",
   "Passwords must match": "Passwords must match",
   "Profile": "Profile",
   "Profile page error": "Profile page error",
@@ -71,6 +74,7 @@
   "Read more": "Read more...",
   "Recommendations": "Recommendations",
   "Recommendations list error": "Recommendations list error",
+  "Reload page": "Reload page",
   "Repeat password": "Repeat password",
   "Save": "Save",
   "Science": "Science",
@@ -80,10 +84,13 @@
   "Sign up": "Sign up",
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
+  "Test example": "Test example",
   "Thanks for the rating!": "Thanks for the rating!",
   "The page is in development": "The page is in development",
   "Topic": "Topic",
   "Topics": "Topics",
+  "Translate": "Translate",
+  "Unexpected error": "Unexpected error",
   "User settings": "User settings",
   "Username": "Username",
   "Username already exist": "Username already exist",
@@ -108,21 +115,12 @@
   "required": "Required field",
   "serverError": "Server Error",
   "short-lng": "Ru",
-  "signUp": "signUp",
+  "signUp": "Sign Up",
   "signupForm": "Signup form",
   "throw error": "Throw error",
   "{{count}} views": "{{count}} views",
   "{{count}} views_one": "{{count}} view",
   "{{count}} views_other": "{{count}} views",
   "{{count}} views_plural": "{{count}} views_plural",
-  "{{count}} views_zero": "{{count}} views",
-  "Главная страница": "Main page",
-  "О сайте": "О сайте",
-  "Обновить страницу": "Reload page",
-  "Перевод": "Translate",
-  "Произошла непредвиденная ошибка": "Unexpected error",
-  "Статья не найдена": "Article not found",
-  "Страница не найдена": "Page not found",
-  "Тестовый пример": "Test example",
-  "Язык": "Русский"
+  "{{count}} views_zero": "{{count}} views"
 }
