--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,12 +12,13 @@
   "Admin": "Админка",
   "Admin page panel": "Панель админа",
   "Age": "Возраст",
-  "All fields mast be filled": "All fields mast be filled",
+  "All fields mast be filled": "Вя должны быть заполнены",
   "All topics": "Все темы",
   "Article Subtitle": "Подзаголовок статьи",
   "Article Title": "Заголовок статьи",
   "Article detail page": "Детальная страница статьи",
-  "Article rating is in progress": "Article rating is in progress",
+  "Article not found": "Статья не найдена",
+  "Article rating is in progress": "Статья в процессе оценки",
   "Articles": "Статьи",
   "Articles not found": "Статьи не найдены",
   "Articles page": "Страница статей",
@@ -28,14 +29,14 @@
   "Cancel edit": "Отменить",
   "City": "Город",
   "Comments": "Комментарии",
-  "Confirm": "Confirm",
+  "Confirm": "Подтвердить",
   "Confirm cancellation": "Подтверждаете отмену",
-  "Contact me": "Contact me",
+  "Contact me": "Напиши мне",
   "Country": "Страна",
   "Create": "Создать",
   "Currency": "Валюта",
   "Delete block": "Удалить блок",
-  "Design switcher": "Design switcher",
+  "Design switcher": "Переключатель дизайна",
   "Economics": "Экономика",
   "Edit Code": "Редактировать Код",
   "Edit article": "Редактировать",
@@ -53,16 +54,18 @@
   "IT": "IT",
   "Image Path": "Путь до изображения",
   "Image title": "Заголовок изображения",
+  "Language": "English",
   "Last name": "Фамилия",
   "Main": "Главная",
-  "Main Page": "Main Page",
-  "Max length 20 characters": "Max length 20 characters",
-  "Min length 3 character": "Min length 3 character",
-  "New": "New",
+  "Main Page": "Главная страница",
+  "Max length 20 characters": "Максимальная длина 20 символов",
+  "Min length 3 character": "Минимальная длина 3 символа",
+  "New": "Новый",
   "No comments": "Комментариев нет",
-  "Old": "Old",
+  "Old": "Старый",
   "Order": "Порядок",
-  "Passwords must match": "Passwords must match",
+  "Page not found": "Страница не найдена",
+  "Passwords must match": "Пароли должны совпадать",
   "Profile": "Профиль",
   "Profile page error": "Ошибка отображения страницы профиля",
   "ProfilePage": "Страница профиля",
@@ -71,6 +74,7 @@
   "Read more": "Читать далее",
   "Recommendations": "Рекомендации",
   "Recommendations list error": "Ошибка отображения рекомендаций",
+  "Reload page": "Обновить страницу",
   "Repeat password": "Повторите пароль",
   "Save": "Сохранить",
   "Science": "Наука",
@@ -80,11 +84,14 @@
   "Sign up": "Регистрация",
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
+  "Test example": "Тестовый пример",
   "Thanks for the rating!": "Спасибо за оценку!",
   "The page is in development": "Страница находится в разработке",
   "Topic": "Тема",
   "Topics": "Темы",
-  "User settings": "User settings",
+  "Translate": "Перевод",
+  "Unexpected error": "Непредвиденная ошибка",
+  "User settings": "Настройки пользователя",
   "Username": "Никнейм",
   "Username already exist": "Такой пользователь уже существует",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
@@ -108,7 +115,7 @@
   "required": "Обязательное поле",
   "serverError": "Ошибка сервера",
   "short-lng": "En",
-  "signUp": "signUp",
+  "signUp": "Зарегистрироваться",
   "signupForm": "Форма регистрации",
   "throw error": "Пробросить ошибку",
   "{{count}} views": "{{count}} views",
@@ -118,14 +125,5 @@
   "{{count}} views_few": "{{count}} просмотра",
   "{{count}} views_many": "{{count}} просмотров",
   "{{count}} views_one": "{{count}} просмотр",
-  "{{count}} views_zero": "{{count}} просмотров",
-  "Главная страница": "Главная страница",
-  "О сайте": "О сайте",
-  "Обновить страницу": "Обновить страницу",
-  "Перевод": "Перевод",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Статья не найдена": "Статья не найдена",
-  "Страница не найдена": "Страница не найдена",
-  "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "{{count}} views_zero": "{{count}} просмотров"
 }
