[feat] add create new article page feature, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
   "Add": "Add",
   "Add Code": "Code block",
   "Add Image": "Image block",
+  "Add New Article": "Add New Article",
   "Add Text": "Text block",
   "Add article": "Add article",
   "Admin": "Admin",
@@ -61,6 +62,7 @@
   "Max length 20 characters": "Max length 20 characters",
   "Min length 3 character": "Min length 3 character",
   "New": "New",
+  "No": "No",
   "No comments": "No comments",
   "Old": "Old",
   "Order": "Order",
@@ -96,6 +98,7 @@
   "Username already exist": "Username already exist",
   "We will glad to get your vote": "We will glad to get your vote",
   "Welcome to the Articles Page": "Welcome to the Articles Page",
+  "Yes": "Yes",
   "Your feedback": "Your feedback",
   "ascending": "ascending",
   "authForm": "Authorization form",
@@ -108,8 +111,8 @@
   "incorrectAge": "Incorrect Age",
   "incorrectLength": "Incorrect Length",
   "increment": "increment",
-  "logIn": "LogIn",
-  "logOut": "LogOut",
+  "logIn": "Log in",
+  "logOut": "Log Out",
   "noData": "No data found",
   "notCorrectUserData": "Incorrect login or password",
   "required": "Required field",
