--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "Add": "Добавить",
   "Add Code": "Блок кода",
   "Add Image": "Изображение",
+  "Add New Article": "Добавить статью",
   "Add Text": "Блок текста",
   "Add article": "Создать статью",
   "Admin": "Админка",
@@ -25,7 +26,7 @@
   "Avatar": "Аватар",
   "Back": "Назад",
   "Back to articles": "Назад к статьям",
-  "Cancel": "Cancel",
+  "Cancel": "Отмена",
   "Cancel edit": "Отменить",
   "City": "Город",
   "Comments": "Комментарии",
@@ -61,6 +62,7 @@
   "Max length 20 characters": "Максимальная длина 20 символов",
   "Min length 3 character": "Минимальная длина 3 символа",
   "New": "Новый",
+  "No": "Нет",
   "No comments": "Комментариев нет",
   "Old": "Старый",
   "Order": "Порядок",
@@ -96,6 +98,7 @@
   "Username already exist": "Такой пользователь уже существует",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
   "Welcome to the Articles Page": "Добро пожаловать на страницу статей",
+  "Yes": "Да",
   "Your feedback": "Ваш отзыв",
   "ascending": "возрастанию",
   "authForm": "Форма авторизации",
