[feat] add article delete page feature, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,6 +37,7 @@
   "Country": "Country",
   "Create": "Create",
   "Currency": "Currency",
+  "Delete article": "Delete article",
   "Delete block": "Delete block",
   "Design switcher": "Design switcher",
   "Economics": "Economics",
