--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -37,6 +37,7 @@
   "Country": "Страна",
   "Create": "Создать",
   "Currency": "Валюта",
+  "Delete article": "Delete article",
   "Delete block": "Удалить блок",
   "Design switcher": "Переключатель дизайна",
   "Economics": "Экономика",
