--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,4 @@
 {
-  "": "",
-  "About": "About",
   "About Page": "О сайте",
   "About us": "О сайте",
   "Access not allowed": "Доступ запрещен",
@@ -13,11 +11,11 @@
   "Admin": "Админка",
   "Admin page panel": "Панель админа",
   "Age": "Возраст",
-  "All fields mast be filled": "Вя должны быть заполнены",
+  "All fields mast be filled": "Все поля должны быть заполнены",
   "All topics": "Все темы",
   "Article Subtitle": "Подзаголовок статьи",
   "Article Title": "Заголовок статьи",
-  "Article Types": "Article Types",
+  "Article Types": "Рубрики статей",
   "Article detail page": "Детальная страница статьи",
   "Article not found": "Статья не найдена",
   "Article rating is in progress": "Статья в процессе оценки",
@@ -37,7 +35,7 @@
   "Country": "Страна",
   "Create": "Создать",
   "Currency": "Валюта",
-  "Delete article": "Delete article",
+  "Delete article": "Удалить статью",
   "Delete block": "Удалить блок",
   "Design switcher": "Переключатель дизайна",
   "Economics": "Экономика",
@@ -50,11 +48,12 @@
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
+  "Error loading articles": "Ошибка при загрузке статей",
   "Exit": "Выход",
   "Fill": "Заполнить",
   "First name": "Имя",
   "Here you can read articles for different themes": "Здесь вы сможете просматривать статьи на разные темы",
-  "IT": "IT",
+  "IT": "ИТ",
   "Image Path": "Путь до изображения",
   "Image title": "Заголовок изображения",
   "Language": "English",
@@ -130,6 +129,5 @@
   "{{count}} views_few": "{{count}} просмотра",
   "{{count}} views_many": "{{count}} просмотров",
   "{{count}} views_one": "{{count}} просмотр",
-  "{{count}} views_zero": "{{count}} просмотров",
-  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
+  "{{count}} views_zero": "{{count}} просмотров"
 }
