--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,6 +40,7 @@
   "Delete block": "Delete block",
   "Design switcher": "Design switcher",
   "Economics": "Economics",
+  "ECONOMICS": "ECONOMICS",
   "Edit Code": "Edit Code",
   "Edit article": "Edit article",
   "Edit profile": "Edit profile",
@@ -83,6 +84,7 @@
   "Repeat password": "Repeat password",
   "Save": "Save",
   "Science": "Science",
+  "SCIENCE": "SCIENCE",
   "Search": "Search",
   "Send": "Send",
   "Settings": "Settings",
