--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -40,6 +40,7 @@
   "Delete block": "Удалить блок",
   "Design switcher": "Переключатель дизайна",
   "Economics": "Экономика",
+  "ECONOMICS": "ЭКОНОМИКА",
   "Edit Code": "Редактировать Код",
   "Edit article": "Редактировать",
   "Edit profile": "Редактировать",
@@ -83,6 +84,7 @@
   "Repeat password": "Повторите пароль",
   "Save": "Сохранить",
   "Science": "Наука",
+  "SCIENCE": "НАУКА",
   "Search": "Поиск",
   "Send": "Отправить",
   "Settings": "Настройки",
