[feat] add Contacts link to sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,6 +33,7 @@
   "Confirm cancellation": "Confirm cancellation",
   "Contact me": "Contact",
   "Contacts page": "Contacts page",
+  "Contacts": "Contacts",
   "Country": "Country",
   "Create": "Create",
   "Currency": "Currency",
