--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,6 +33,7 @@
   "Confirm cancellation": "Подтверждаете отмену",
   "Contact me": "Связаться",
   "Contacts page": "Страница контактов",
+  "Contacts": "Контакты",
   "Country": "Страна",
   "Create": "Создать",
   "Currency": "Валюта",
